added projectiles, removed laser

--- a/client/index.html
+++ b/client/index.html
@@ -12,6 +12,7 @@
 		<script type="text/javascript" src= "https://cdnjs.cloudflare.com/ajax/libs/randomcolor/0.4.4/randomColor.min.js"></script>
 		<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/1.4.8/socket.io.min.js"></script>
 		<script src="/client/game.js"></script>
+		<script src="/client/fireball.js"></script>
 		<link  href="/client/main.css" rel="stylesheet"/>
 		
 	</head>
