adds N texture,  instructions, can shoot anytime

--- a/client/index.html
+++ b/client/index.html
@@ -23,6 +23,13 @@
 		<form id = 'pass-form' autocomplete = 'off'>
 		
 			<input id = "pass-input" type = "password" value = 'shrek'></input>
+			<p id = 'instructions'><i>
+			arrow keys / WSAD to move </br>
+			click to shoot at things </br>
+			press 'L' to lock the mouse </br>
+			
+			It's not much, but enjoy!</i>
+			</p>
 			
 		</form>
 	</div>
